# hierarchical-fl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
.claude/skills/: flower-hfl.md
.github/workflows/: ci.yaml
config/: defaults.yaml  global.yaml  topology.yaml
config/edge/: edge_01.yaml  edge_02.yaml
docs/: design-decisions.md
scripts/: setup_jetson.sh
src/core/: client.py  edge_node.py  global_server.py  run_edge.py  run_leaf.py  training.py
src/data/: loader.py
src/models/: nets.py
src/strategies/: aggregation.py
src/utils/: config.py  logger.py
tests/: test_basics.py
